[metadata]
name = <reponame>
url = https://github.com/physiopy/<reponame>
download_url = https://github.com/physiopy/<reponame>
author = The Physiopy Community
maintainer = The Physiopy Community
maintainer_email = physiopy.community@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: <license>
    Programming Language :: Python :: 3
license = <license>
description = <Description>.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    <reponame>

[options]
python_requires = >=3.6
install_requires =
    numpy>
    duecredit
tests_require =
    pytest >=5.3
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
extra_1 =
    numpy
extra_2 =
    numpy
all =
    %(extra_1)s
    %(extra_2)s
doc =
    sphinx>=2.0
    sphinx-argparse
    sphinx_rtd_theme
    myst-parser
style =
    codespell>=2.2.4
    ruff>=0.14.2
test =
    %(all)s
    %(style)s
    pytest >=5.3
    pytest-cov
    coverage
devtools =
    pre-commit
dev =
    %(devtools)s
    %(doc)s
    %(test)s

[options.entry_points]
console_scripts =
    <reponame>=<reponame>.workflow:_main

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[coverage:run]
branch = True
omit =
    <reponame>/tests/*
    docs/*
    setup.py
    versioneer.py
    doi.py
    __init__.py
    */__init__.py
    */*/__init__.py

[versioneer]
VCS = git
style = pep440
versionfile_source = <reponame>/_version.py
versionfile_build = <reponame>/_version.py
tag_prefix =
parentdir_prefix =
